--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "classnames": "^2.2.6",
     "react": "^16.9.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-hamburgers": "^1.0.0",
+    "react-metismenu": "^1.4.0",
+    "react-perfect-scrollbar": "^1.5.3",
+    "react-redux": "^7.1.1",
+    "react-resize-detector": "^4.2.0",
+    "react-responsive-tabs": "^3.2.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "react-toastify": "^5.3.2",
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
