--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.3.2",
+    "react-vertical-timeline-component": "^2.5.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4"
   },
