--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
@@ -19,10 +20,12 @@
     "react-responsive-tabs": "^3.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-services-injector": "^1.0.0-rc.6",
     "react-toastify": "^5.3.2",
     "react-vertical-timeline-component": "^2.5.0",
     "reactstrap": "^8.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
