--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hamburgers": "^1.0.0",
     "react-metismenu": "^1.4.0",
     "react-perfect-scrollbar": "^1.5.3",
+    "react-rating": "^2.0.0",
     "react-redux": "^7.1.1",
     "react-resize-detector": "^4.2.0",
     "react-responsive-tabs": "^3.2.0",
