--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-hamburgers": "^1.0.0",
+    "react-highcharts": "^16.1.0",
     "react-metismenu": "^1.4.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-rating": "^2.0.0",
